# OrderRefactor

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
scripts/: build-and-test.sh
src/: CMakeLists.txt  order.cpp  order.hpp
tests/: CMakeLists.txt  order_tests.cpp
